--- a/index.html
+++ b/index.html
@@ -64,13 +64,25 @@
         </nav>
 
         <section id="quienes-somos" class="hero__container container">
-            <h1 class="hero__title">Quienes Somos</h1>
-            <p class="hero__paragraph">Nosotros somos Velour Skin, nos dedicamos a crear los mejores productos para tu
-                piel, eso es lo
-                más importante para nosotros, que nuestros clientes estén satisfechos con nuestros productos.
-            </p>
-            <a href="#" class="cta">Contáctanos</a>
+            <div class="quienes__contenido">
+                <div class="quienes__texto">
+                    <h1 class="hero__title">¿Quiénes Somos?</h1>
+                    <p class="hero__paragraph">
+                        Nosotros somos <strong>Velour Skin</strong>, nos dedicamos a crear los mejores productos para tu
+                        piel.
+                        Lo más importante para nosotros es que nuestros clientes estén satisfechos con nuestros
+                        productos.
+                    </p>
+                    <a href="#contacto" class="cta">Contáctanos</a>
+                </div>
+
+                <figure class="quienes__imagen">
+                    <img src="./images/Fundador.jpeg" alt="Fundadora de Velour Skin" class="quienes__img">
+                    <figcaption class="quienes__caption">Fundador: Adolfo González</figcaption>
+                </figure>
+            </div>
         </section>
+
     </header>
 
     <main>
@@ -149,31 +161,31 @@
 
                 <div class="carousel-track">
                     <div class="product-card">
-                        <img src="images/perfume.jpg" alt="Perfume Rosé">
+                        <img src="images/p1.jpg" alt="Perfume Rosé">
                         <h3>Perfume Rosé</h3>
                         <p>$25</p>
                     </div>
 
                     <div class="product-card">
-                        <img src="images/kit-facial.jpg" alt="Kit Facial Premium">
+                        <img src="images/p2.jpg" alt="Kit Facial Premium">
                         <h3>Kit Facial Premium</h3>
                         <p>$49.99</p>
                     </div>
 
                     <div class="product-card">
-                        <img src="images/labial.jpg" alt="Labial Velvet Mate">
+                        <img src="images/p2.jpg" alt="Labial Velvet Mate">
                         <h3>Labial Velvet Mate</h3>
                         <p>$12.50</p>
                     </div>
 
                     <div class="product-card">
-                        <img src="images/crema.jpg" alt="Crema Hidratante Light">
+                        <img src="images/p3.jpg" alt="Crema Hidratante Light">
                         <h3>Crema Hidratante</h3>
                         <p>$18</p>
                     </div>
 
                     <div class="product-card">
-                        <img src="images/mascarilla.jpg" alt="Mascarilla de Arcilla Rosa">
+                        <img src="images/p4.jpg" alt="Mascarilla de Arcilla Rosa">
                         <h3>Mascarilla Rosa</h3>
                         <p>$15</p>
                     </div>
@@ -188,19 +200,16 @@
 
             <div class="clients-container">
                 <div class="client-card">
-                    <img src="images/cliente1.jpg" alt="Clienta 1">
                     <h3>María López</h3>
                     <p>“Me encantaron sus productos, la calidad es excelente y el aroma dura todo el día.”</p>
                 </div>
 
                 <div class="client-card">
-                    <img src="images/cliente2.jpg" alt="Clienta 2">
                     <h3>Ana Pérez</h3>
                     <p>“El envío fue rápido y el empaque es hermoso. Volveré a comprar.”</p>
                 </div>
 
                 <div class="client-card">
-                    <img src="images/cliente3.jpg" alt="Clienta 3">
                     <h3>Laura Gómez</h3>
                     <p>“Mis amigas también se volvieron fans. ¡Felicidades por el buen servicio!”</p>
                 </div>
