--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <meta property="og:title" content="VelourSKin">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 
 </head>
