--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                 <figure class="quienes__imagen">
                     <img src="./images/Fundador.jpeg" alt="Fundadora de Velour Skin" class="quienes__img">
-                    <figcaption class="quienes__caption">Fundador: Adolfo González</figcaption>
+                    <figcaption class="quienes__caption">Fundador: Adolfo González, 0900-25-28528</figcaption>
                 </figure>
             </div>
         </section>
